gccida/g2/unshare_all_decls
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unshare_all_decls/src/emit-rtl.c:2855:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unshare_all_decls/src/emit-rtl.c:2859:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **p_chain; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unshare_all_decls/src/emit-rtl.c:2931:20: error: expected expression
v25 = ( tree_node *)i5[5]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unshare_all_decls/src/emit-rtl.c:2931:9: error: use of undeclared identifier 'tree_node'
v25 = ( tree_node *)i5[5]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unshare_all_decls/src/obj/emit-rtl.o] Error 1
